beta test update 2

--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -154,6 +154,7 @@
     "profile": {
         "usernameLabel": "Имя пользователя:",
         "countryLabel": "Страна:",
-        "birthdayLabel": "День рождения:"
+        "birthdayLabel": "День рождения:",
+        "welcomeUser": "Добро пожаловать, {username}"
     }
 }
