--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -154,6 +154,7 @@
     "profile": {
         "usernameLabel": "Username:",
         "countryLabel": "Country:",
-        "birthdayLabel": "Birthday:"
+        "birthdayLabel": "Birthday:",
+        "welcomeUser": "Welcome, {username}"
     }
 }
