Update profile system v4

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -152,9 +152,11 @@
         "forgot-email": "Email"
     },
     "profile": {
+        "welcomeUser": "Welcome, {username}",
         "usernameLabel": "Username:",
         "countryLabel": "Country:",
         "birthdayLabel": "Birthday:",
-        "welcomeUser": "Welcome, {username}"
+        "not-found-title": "The user was not found",
+        "home-button": "Return back"
     }
 }
