--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -152,9 +152,11 @@
         "forgot-email": "Электронная почта"
     },
     "profile": {
+        "welcomeUser": "Добро пожаловать, {username}",
         "usernameLabel": "Имя пользователя:",
         "countryLabel": "Страна:",
         "birthdayLabel": "День рождения:",
-        "welcomeUser": "Добро пожаловать, {username}"
+        "not-found-title": "Пользователь не найден",
+        "home-button": "Вернуться обратно"
     }
 }
