--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -158,5 +158,21 @@
         "birthdayLabel": "День рождения:",
         "not-found-title": "Пользователь не найден",
         "home-button": "Вернуться обратно"
+    },
+    "roadmap": {
+        "roadmap-heading": "Дорожная карта 2025–2026",
+        "roadmap-title": "Наши планы",
+        "stage-1": "Оптимизация сайта и программного обеспечения",
+        "stage-discription1": "Продолжим улучшать стабильность, скорость загрузки и удобство использования как веб-сайта, так и основного ПО.",
+        "stage-2": "Переход на современные серверы и обновление базы данных",
+        "stage-discription2": "Планируется миграция на более производительную серверную инфраструктуру с новым интерфейсом управления и хранения данных.",
+        "stage-3": "Анонс и запуск нового продукта PixelKey",
+        "stage-discription3": "Анонс и выход инновационного инструмента для музыкальных продюсеров и битмейкеров — платформа PixelKey с фокусом на удобство и креативность.",
+        "stage-4": "Сотрудничество со СМИ и блогерами",
+        "stage-discription4": "Активная работа над PR-направлением: пресс-релизы, интервью, статьи и коллаборации с профильными изданиями и блогами.",
+        "stage-5": "Расширение аудитории и монетизация",
+        "stage-discription5": "Запуск рекламных кампаний, подключение платёжных систем и развитие моделей монетизации.",
+        "stage-6": "Привлечение спонсоров и инвесторов",
+        "stage-discription6": "Формирование устойчивой экосистемы с поддержкой партнёров, инвесторов и стратегических союзников."
     }
 }
