--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -174,5 +174,11 @@
         "stage-discription5": "Запуск рекламных кампаний, подключение платёжных систем и развитие моделей монетизации.",
         "stage-6": "Привлечение спонсоров и инвесторов",
         "stage-discription6": "Формирование устойчивой экосистемы с поддержкой партнёров, инвесторов и стратегических союзников."
+    },
+    "advertisement": {
+        "advertisement-banner-text": "Получите доступ к «Премиум»",
+        "advertisement-banner-description": "Поддержи проект и получи больше:<br><br>🔕 Без рекламы и баннеров<br>🎁 Эксклюзивные фишки и бонусы<br>💡 Ранний доступ к новым функциям<br>❤️ Поддержка развития проекта<br>",
+        "advertisement-banner-note": "PixeFPS остаётся бесплатной, но премиум — это способ сказать «спасибо» и получить чуть больше удобства.",
+        "advertisement-banner-button": "Подробнее"
     }
 }
