Update banner + add localization

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -20,7 +20,7 @@
         "about-us": "About us"
     },
     "footer": {
-        "copyright": "© 2025 Project of the ValeyevPrograms company.",
+        "copyright": "© 2025 Project of the ValeyevStudio company.",
         "user-agreement": "User Agreement"
     },
     "footer-social": {
