--- a/assets/locales/ko-KR.json
+++ b/assets/locales/ko-KR.json
@@ -20,7 +20,7 @@
     "about-us": "회사 소개"
   },
   "footer": {
-    "copyright": "© 2025 ValeyevPrograms 프로젝트.",
+    "copyright": "© 2025 ValeyevStudio 프로젝트.",
     "user-agreement": "이용 약관"
   },
   "footer-social": {
