--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -20,7 +20,7 @@
         "about-us": "О нас"
     },
     "footer": {
-        "copyright": "© 2025 Проект компании ValeyevPrograms.",
+        "copyright": "© 2025 Проект компании ValeyevStudio.",
         "user-agreement": "Пользовательское соглашение"
     },
     "footer-social": {
