--- a/assets/locales/ua-UA.json
+++ b/assets/locales/ua-UA.json
@@ -1,17 +1,181 @@
 {
-    "subscribe-btn": "Підписатися",
     "mainTitle": "ValeyevStudio — новий крок у майбутнє!",
-    "description": "Нові інноваційні програми від ValeyevPrograms є гармонійним поєднанням передових технологій, <br> максимальної оптимізації та зручності у використанні. Кожен додаток створюється відповідно до найвищих стандартів, <br> надаючи користувачам зручний та інтуїтивно зрозумілий інтерфейс. Ми прагнемо забезпечити максимально адаптовану до потреб користувачів функціональність наших програм, <br> одночасно забезпечуючи високу продуктивність та економію ресурсів. <br> <br> ValeyevPrograms — це майбутнє програмного забезпечення сьогодні.",
+    "description": "Нові інноваційні програми від ValeyevPrograms є гармонійним поєднанням передових технологій, <br> максимальної оптимізації та зручності використання. Кожен застосунок розроблено з урахуванням найвищих стандартів, <br> забезпечуючи користувачам інтуїтивно зрозумілий інтерфейс. Ми прагнемо зробити функціональність наших програм <br> максимально адаптованою до потреб користувачів, при цьому забезпечуючи високу продуктивність та економію ресурсів. <br><br> ValeyevPrograms — це майбутнє програмного забезпечення вже сьогодні.",
+    "subscribe-btn": "Підписатися",
+    "download-btn": "Завантажити",
+    "team-heading": "Наша команда",
+    "aboutcompany-heading": "Про студію ValeyevStudio",
+    "aboutcompany-text": "ValeyevStudio — це не просто компанія з розробки програмного забезпечення, а бачення розумнішого та ефективнішого цифрового майбутнього. <br><br> Ми спеціалізуємось на створенні високопродуктивних, зручних у використанні застосунків під брендом <strong>ValeyevPrograms</strong>. Кожен продукт, який ми випускаємо, орієнтований на простоту, швидкість та інновації — ставлячи користувацький досвід на перше місце. <br><br> Наша команда керується допитливістю, креативністю та постійним прагненням до вдосконалення. Ми не просто створюємо ПЗ — ми формуємо майбутнє цифрових інструментів.",
+    "license-heading": "Користувацька угода та політика конфіденційності",
+    "legal-subheading": "Ця угода регулює використання програмного забезпечення, розробленого ValeyevStudio (далі — Nikita Valeyev). Встановлюючи та використовуючи програми PixelFPS, PixelKey та інші продукти ValeyevStudio, ви погоджуєтеся з умовами цієї угоди.",
+    "push-suggestions-title": "Є пропозиції щодо покращення?",
+    "push-suggestions-text": "Напишіть нам, ми обов’язково врахуємо ваші відгуки та побажання, щоб удосконалити або додати нові функції.",
+    "push-suggestions-button": "Запропонувати",
+    "push-donation-title": "Благодійний фонд",
+    "push-donation-text": "Для тих, хто бажає підтримати автора за виконану роботу. Кошти підуть на розвиток екосистеми проєкту.",
+    "push-donation-button": "Підтримати",
     "nav": {
         "home": "Головна",
         "our-products": "Наші продукти",
         "about-us": "Про нас"
     },
     "footer": {
-        "copyright": "© 2025 Проект компанії ValeyevPrograms.",
-        "user-agreement": "Угода користувача"
+        "copyright": "© 2025 Проєкт компанії ValeyevStudio.",
+        "user-agreement": "Користувацька угода"
     },
     "footer-social": {
         "social-platforms": "Соціальні мережі:"
+    },
+    "captcha-content": {
+        "captcha-title": "Підтвердіть, що ви не робот",
+        "captcha-text-container": "Я не робот",
+        "captcha-footer": "Нова технологія перевірки 2.0"
+    },
+    "faq": {
+        "faq-title": "Часті запитання",
+        "questions": {
+            "q1": {
+                "question": "Чому саме ми?",
+                "answer": "Ми — команда розробників, зацікавлених у тому, щоб надати продукт максимально великій кількості людей на планеті, щоб кожен мав змогу спробувати наш продукт. І все це абсолютно безкоштовно!"
+            },
+            "q2": {
+                "question": "Як почати користуватися програмою?",
+                "answer": "Щоб завантажити наше фірмове ПЗ, перейдіть у відповідний розділ сайту та натисніть кнопку Завантажити.<br><br>Пам’ятайте, що завантажуючи наше ПЗ, ви погоджуєтеся з користувацькою угодою та політикою нашої компанії — Valeyev Studio."
+            },
+            "q3": {
+                "question": "Вартість платної підписки?",
+                "answer": "Ціна платної підписки становить 0,99 доларів США. Після активації підписка діє 1 календарний місяць.<br><br>Підписка дає змогу через налаштування прибрати нав’язливий банер і отримати додаткові функції."
+            }
+        }
+    },
+    "tooltip": {
+        "music-volume": "Гучність музики",
+        "select-language": "Вибрати мову",
+        "switch-themes": "Змінити тему",
+        "purchase-subscription": "Оформити підписку",
+        "download-description": "Завантажити останню версію",
+        "sign-in": "Увійти до облікового запису"
+    },
+    "user-agreement-btn": "Користувацька угода",
+    "privacy-policy-btn": "Політика конфіденційності",
+    "legal-content": {
+        "effective-date": "Дата набуття чинності: 01.01.2026",
+        "last-updated": "Останнє оновлення: 01.01.2026",
+        "intro": "Ця угода регулює використання програмного забезпечення, розробленого ValeyevStudio.",
+        "section1-title": "1. Ліцензія на використання",
+        "section1-1": "1.1. Користувач отримує обмежене, невиключне, непередаване право на використання ПЗ.",
+        "section1-2": "1.2. Програмне забезпечення надається \"як є\", без будь-яких гарантій.",
+        "section2-title": "2. Заборонені дії",
+        "section2-1": "2.1. Користувачеві заборонено:",
+        "section2-1-list": [
+            "Продавати, розповсюджувати або змінювати програми без дозволу ValeyevStudio.",
+            "Розміщувати програми під іншим ім’ям.",
+            "Зламувати або змінювати захисні механізми."
+        ],
+        "section2-2": "2.2. При розміщенні на сторонніх сайтах — лише оригінальна версія з зазначенням авторства.",
+        "section3-title": "3. Оновлення та підтримка",
+        "section3-1": "3.1. Розробник має право змінювати функціонал і випускати оновлення.",
+        "section3-2": "3.2. Розробник не несе відповідальності за збої.",
+        "section4-title": "4. Відповідальність",
+        "section4-1": "4.1. Використання програмного забезпечення на ваш страх і ризик.",
+        "section5-title": "5. Зміни умов",
+        "section5-1": "5.1. Угода може змінюватися, актуальна версія доступна на офіційному сайті.",
+        "privacy-title1": "1. Які дані ми збираємо?",
+        "privacy-data-list": [
+            "Облікові дані: логін, пароль, статус підписки.",
+            "Особисті дані: ПІБ, дата народження, регіон, місто."
+        ],
+        "privacy-title2": "2. Як використовуються дані?",
+        "privacy-usage-list": [
+            "Для авторизації, персоналізації та доступу до преміум-функцій."
+        ],
+        "privacy-title3": "3. Захист даних",
+        "privacy-3-1": "3.1. Ми використовуємо сучасні методи захисту, зокрема шифрування.",
+        "privacy-3-2": "3.2. Доступ — лише у співробітників ValeyevStudio.",
+        "privacy-title4": "4. Передача третім особам",
+        "privacy-4-1": "4.1. Ми не передаємо дані третім особам без вашої згоди.",
+        "privacy-title5": "5. Видалення даних",
+        "privacy-5-1": "Надішліть запит на видалення на: valeyevstudio@gmail.com.",
+        "privacy-title6": "6. Зміни",
+        "privacy-6-1": "6.1. Ми можемо змінювати політику та повідомляти користувачів про це."
+    },
+    "bio": {
+        "title": "Біографія",
+        "hint": "Біографія має містити не більше 500 символів!",
+        "data-title": "Ваші дані"
+    },
+    "userMenu": {
+        "profile": "Мій профіль",
+        "settings": "Налаштування",
+        "support": "Допомога",
+        "logout": "Вийти"
+    },
+    "auth": {
+        "signIn": "Увійти",
+        "authorization": "Авторизація",
+        "login": "Вхід",
+        "noAccount": "Немає облікового запису?",
+        "signUp": "Зареєструйтесь",
+        "forgotPassword": "Забули пароль?"
+    },
+    "forgotpassword": {
+        "ForgotPasswordTitle": "Зміна пароля",
+        "modal-forgotpassword-description": "Будь ласка, введіть адресу електронної пошти, пов’язану з вашим обліковим записом. Ми надішлемо вам інструкції для скидання пароля.",
+        "modal-cancel": "Закрити",
+        "modal-submit": "Надіслати",
+        "input-email-error": "Неправильна адреса електронної пошти",
+        "input-forgotpassword-success": "Якщо обліковий запис з такою адресою існує, ми надішлемо вам листа з подальшими інструкціями щодо скидання пароля."
+    },
+    "registration": {
+        "registration-title": "Створити обліковий запис",
+        "password-hint": "Пароль повинен містити щонайменше 6 символів і спеціальні символи (! “ # $ % ‘ () *)",
+        "registration-button": "Зареєструватися",
+        "agreement-note": "Натискаючи кнопку реєстрації, ви погоджуєтесь з {link}.",
+        "user-agreement-link-text": "користувацькою угодою"
+    },
+    "resetpassword": {
+        "resetpassword-title": "Скинути пароль",
+        "reset-btn": "Підтвердити зміни",
+        "tooShort": "Ви ввели менше 6 символів.",
+        "noSpecialChar": "Введіть спеціальний символ (! \" # $ % ' () *)"
+    },
+    "placeholder": {
+        "login-username": "Ім’я користувача або електронна пошта",
+        "login-password": "Пароль",
+        "register-first-name": "Ім’я",
+        "register-last-name": "Прізвище",
+        "register-username": "Ім’я користувача",
+        "register-email": "Електронна пошта",
+        "register-password": "Пароль",
+        "reset-new-password": "Новий пароль",
+        "reset-confirm-password": "Підтвердьте пароль",
+        "forgot-email": "Електронна пошта"
+    },
+    "profile": {
+        "welcomeUser": "Ласкаво просимо, {username}",
+        "usernameLabel": "Ім’я користувача:",
+        "countryLabel": "Країна:",
+        "birthdayLabel": "Дата народження:"
+    },"roadmap": {
+        "roadmap-heading": "Дорожня карта 2025–2026",
+        "roadmap-title": "Наші плани",
+        "stage-1": "Оптимізація сайту та програмного забезпечення",
+        "stage-discription1": "Продовжимо покращувати стабільність, швидкість завантаження та зручність використання як вебсайту, так і основного ПЗ.",
+        "stage-2": "Перехід на сучасні сервери та оновлення бази даних",
+        "stage-discription2": "Планується міграція на більш продуктивну серверну інфраструктуру з новим інтерфейсом керування та зберігання даних.",
+        "stage-3": "Анонс і запуск нового продукту PixelKey",
+        "stage-discription3": "Анонс та випуск інноваційного інструменту для музичних продюсерів і бітмейкерів — платформа PixelKey з фокусом на зручність та креативність.",
+        "stage-4": "Співпраця зі ЗМІ та блогерами",
+        "stage-discription4": "Активна робота над PR-напрямом: пресрелізи, інтерв’ю, статті та колаборації з профільними виданнями і блогами.",
+        "stage-5": "Розширення аудиторії та монетизація",
+        "stage-discription5": "Запуск рекламних кампаній, підключення платіжних систем та розвиток моделей монетизації.",
+        "stage-6": "Залучення спонсорів та інвесторів",
+        "stage-discription6": "Формування сталої екосистеми за підтримки партнерів, інвесторів та стратегічних союзників."
+    },
+    "advertisement": {
+        "advertisement-banner-text": "Отримайте доступ до «Преміум»",
+        "advertisement-banner-description": "Підтримай проєкт і отримай більше:<br><br>🔕 Без реклами та банерів<br>🎁 Ексклюзивні фішки та бонуси<br>💡 Ранній доступ до нових функцій<br>❤️ Підтримка розвитку проєкту<br>",
+        "advertisement-banner-note": "PixeFPS залишається безкоштовним, але преміум — це спосіб сказати «дякую» і отримати трохи більше зручностей.",
+        "advertisement-banner-button": "Детальніше"
     }
 }
