--- a/assets/locales/ua-UA.json
+++ b/assets/locales/ua-UA.json
@@ -156,7 +156,8 @@
         "usernameLabel": "Ім’я користувача:",
         "countryLabel": "Країна:",
         "birthdayLabel": "Дата народження:"
-    },"roadmap": {
+    },
+    "roadmap": {
         "roadmap-heading": "Дорожня карта 2025–2026",
         "roadmap-title": "Наші плани",
         "stage-1": "Оптимізація сайту та програмного забезпечення",
