--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -180,5 +180,16 @@
         "advertisement-banner-description": "Поддержи проект и получи больше:<br><br>🔕 Без рекламы и баннеров<br>🎁 Эксклюзивные фишки и бонусы<br>💡 Ранний доступ к новым функциям<br>❤️ Поддержка развития проекта<br>",
         "advertisement-banner-note": "PixeFPS остаётся бесплатной, но премиум — это способ сказать «спасибо» и получить чуть больше удобства.",
         "advertisement-banner-button": "Подробнее"
+    },
+    "settings": {
+        "settings-card-title": "Основные настройки",
+        "settings-card-firstname": "Имя",
+        "settings-card-lastname": "Фамилия",
+        "settings-card-gender": "Пол",
+        "settings-card-datebirth": "Дата рождения",
+        "settings-card-country": "Страна"
+    },
+    "secure": {
+        "secure-card-title": "Безопасность"
     }
 }
