--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -191,5 +191,10 @@
     },
     "secure": {
         "secure-card-title": "Безопасность"
+    },
+    "promo-modal": {
+        "promotitle_pixelfps": "Больше возможностей PixelFPS",
+        "promodiscr_pixelfps": "Отключение промо-баннеров, рекламы, крутые экспериментальные функции и технологии для пользователей с премиум подпиской.",
+        "promo-button_buy": "Приобрести"
     }
 }
