--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -195,6 +195,10 @@
     "promo-modal": {
         "promotitle_pixelfps": "Больше возможностей PixelFPS",
         "promodiscr_pixelfps": "Отключение промо-баннеров, рекламы, крутые экспериментальные функции и технологии для пользователей с премиум подпиской.",
-        "promo-button_buy": "Приобрести"
+        "promo-button_buy": "Приобрести",
+
+        "upgrade_title": "Получите максимальную отдачу от PixelFPS",
+        "upgrade_descr": "Премиум-пользователи не получают рекламы, с премиум подпиской: мгновенные обновления и доступа к эксклюзивным и эксперементальным функциям.",
+        "upgrade_button": "Обновиться сейчас"
     }
 }
