--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -193,10 +193,9 @@
         "secure-card-title": "Secure"
     },
     "promo-modal": {
-        "promotitle_pixelfps": "More PixelFPS features",
-        "promodiscr_pixelfps": "Disable promo banners, ads, cool experimental features and technologies for users with a premium subscription.",
-        "promo-button_buy": "Purchase",
-
+        "pixelfps_title": "More PixelFPS features",
+        "pixelfps_descr": "Disable promo banners, ads, cool experimental features and technologies for users with a premium subscription.",
+        "pixelfps_button": "Purchase",
         "upgrade_title": "Get the most from PixelFPS",
         "upgrade_descr": "Premium users receive no ads, with a premium subscription: instant updates and access to exclusive and experimental features.",
         "upgrade_button": "Upgrade Now"
