--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -21,7 +21,8 @@
     },
     "footer": {
         "copyright": "© 2025 Проект компании ValeyevStudio.",
-        "user-agreement": "Пользовательское соглашение"
+        "user-agreement": "Пользовательское соглашение",
+        "partners": "Партнёрам"
     },
     "footer-social": {
         "social-platforms": "Социальные сети:"
@@ -200,5 +201,20 @@
         "upgrade_title": "Получите максимальную отдачу от PixelFPS",
         "upgrade_descr": "Премиум-пользователи не получают рекламы, с премиум подпиской: мгновенные обновления и доступа к эксклюзивным и эксперементальным функциям.",
         "upgrade_button": "Обновиться сейчас"
+    },
+    "brand": {
+        "brand.logoinfo.title": "Логотип",
+        "brand.logoinfo.description": "Логотип ValeyevStudio — единственный и главный символ нашей студии. Он представлен в двух версиях: полная содержит в себе иконку и текст, компактная — только иконку.<br><br> Иконка состоит из квадратной формы с закруглёнными краями и текста VS расшифровка ValeyevStudio. Для текста используется фирменный шрифт Mi Sans.",
+        "brand.productinfo.title": "Наши продукты",
+        "brand.productinfo.description": "У основных продуктов нашей студии есть фирменный дизайн и собственный Логотип. Каждый логотип содержит иконку и текстовую часть.<br><br> Иконка состоит из уникального знака продукта на квадратной форме с закруглёнными краями. Для текста используется фирменный шрифт Mi Sans.",
+        "brand.color.title": "Цвета",
+        "partner.media.description": "По вопросам медиапартнёрств и специальных проектов.",
+        "partner.press.title": "Представителям прессы",
+        "partner.press.description": "Контакт пресс‑службы для обращений СМИ.",
+        "partner.materials.title": "Материалы ValeyevStudio",
+        "partner.materials.description": "Основные продукты и материалы нашей студии.",
+        "partner.materials.link": "Ознакомиться",
+        "brand.info.iconAlt": "Информационная иконка",
+        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке."
     }
 }
