--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -215,6 +215,7 @@
         "partner.materials.description": "Основные продукты и материалы нашей студии.",
         "partner.materials.link": "Ознакомиться",
         "brand.info.iconAlt": "Информационная иконка",
-        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке."
+        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке.",
+        "brand.materials.description": "Загружайте фирменные наши материалы и ознакомьтесь с правилами их использования. <a href=\"about.html#rules-material\" class=\"brand-rules-link\">Читать правила</a>"
     }
 }
