--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -203,18 +203,18 @@
         "upgrade_button": "Обновиться сейчас"
     },
     "brand": {
+        "brand.materials.description": "Загружайте фирменные наши материалы и ознакомьтесь с правилами их использования. <a href=\"about.html#rules-material\" class=\"brand-rules-link\">Читать правила</a>",
         "brand.logoinfo.title": "Логотип",
         "brand.logoinfo.description": "Логотип ValeyevStudio — единственный и главный символ нашей студии. Он представлен в двух версиях: полная содержит в себе иконку и текст, компактная — только иконку.<br><br> Иконка состоит из квадратной формы с закруглёнными краями и текста VS расшифровка ValeyevStudio. Для текста используется фирменный шрифт Mi Sans.",
         "brand.productinfo.title": "Наши продукты",
         "brand.productinfo.description": "У основных продуктов нашей студии есть фирменный дизайн и собственный Логотип. Каждый логотип содержит иконку и текстовую часть.<br><br> Иконка состоит из уникального знака продукта на квадратной форме с закруглёнными краями. Для текста используется фирменный шрифт Mi Sans.",
         "brand.color.title": "Цвета",
+        "partner.meida.title": "Для медиа",
         "partner.media.description": "По вопросам медиапартнёрств и специальных проектов.",
         "partner.press.title": "Представителям прессы",
         "partner.press.description": "Контакт пресс‑службы для обращений СМИ.",
         "partner.materials.title": "Материалы ValeyevStudio",
         "partner.materials.description": "Основные продукты и материалы нашей студии.",
         "partner.materials.link": "Ознакомиться",
-        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке.",
-        "brand.materials.description": "Загружайте фирменные наши материалы и ознакомьтесь с правилами их использования. <a href=\"about.html#rules-material\" class=\"brand-rules-link\">Читать правила</a>"
-    }
+        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке."    }
 }
