Brand fix localization

--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -216,5 +216,6 @@
         "partner.materials.title": "Материалы ValeyevStudio",
         "partner.materials.description": "Основные продукты и материалы нашей студии.",
         "partner.materials.link": "Ознакомиться",
-        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке."    }
+        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке."    
+    }
 }
