Brand fix localization v4 fix

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -210,7 +210,7 @@
         "brand.productinfo.title": "Our Products",
         "brand.productinfo.description": "The main products of our studio have a branded design and their own logo. Each logo contains an icon and a text part.<br><br>The icon consists of a unique product mark on a square shape with rounded corners. The text uses the custom Mi Sans font.",
         "brand.color.title": "Colors",
-        "partner.meida.title": "For media",
+        "partner.media.title": "For media",
         "partner.media.description": "For media partnership inquiries and special projects.",
         "partner.press.title": "For Press Representatives",
         "partner.press.description": "Press office contact for media inquiries.",
