--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -210,7 +210,7 @@
         "brand.productinfo.title": "Наши продукты",
         "brand.productinfo.description": "У основных продуктов нашей студии есть фирменный дизайн и собственный Логотип. Каждый логотип содержит иконку и текстовую часть.<br><br> Иконка состоит из уникального знака продукта на квадратной форме с закруглёнными краями. Для текста используется фирменный шрифт Mi Sans.",
         "brand.color.title": "Цвета",
-        "partner.meida.title": "Для медиа",
+        "partner.media.title": "Для медиа",
         "partner.media.description": "По вопросам медиапартнёрств и специальных проектов.",
         "partner.press.title": "Представителям прессы",
         "partner.press.description": "Контакт пресс‑службы для обращений СМИ.",
