Update about page

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -62,8 +62,8 @@
         "download-description": "Download the latest version",
         "sign-in": "Sign in to your account"
     },
-    "user-agreement-btn": "User Agreement",
-    "privacy-policy-btn": "Privacy Policy",
+    "user-agreement-btn": "User agreement",
+    "privacy-policy-btn": "Privacy policy",
     "legal-content": {
         "effective-date": "Effective date: 01.01.2026",
         "last-updated": "Last updated: 01.01.2026",
