Update promocode system v4

--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -165,6 +165,14 @@
         "not-found-title": "Пользователь не найден",
         "home-button": "Вернуться обратно"
     },
+    "modal-deposit": {
+        "switch_title_deposit": "Пополнить",
+        "switch_title_promo": "Промокод",
+        "promocode-title": "Активация промокода",
+        "description-promocode": "Введите промокод и получите деньги, которые можно потратить на покупку подписки, кода и подарки другу. Промокод состоит из 16 символов.",
+        "button-promocode-activate": "Активировать",
+        "in-progress": "Раздел находится в разработке."
+    },
     "roadmap": {
         "roadmap-heading": "Дорожная карта 2025–2026",
         "roadmap-title": "Наши планы",
@@ -222,6 +230,6 @@
         "partner.materials.title": "Материалы ValeyevStudio",
         "partner.materials.description": "Основные продукты и материалы нашей студии.",
         "partner.materials.link": "Ознакомиться",
-        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке."    
+        "brand.info.text": "Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке."
     }
 }
