Update user profile + add card block info premium subscribe v7

--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -161,7 +161,7 @@
         "welcomeUser": "Добро пожаловать, {username}",
         "usernameLabel": "Имя пользователя:",
         "countryLabel": "Страна:",
-        "birthdayLabel": "День рождения:",
+        "birthdayLabel": "Рождение:",
         "not-found-title": "Пользователь не найден",
         "home-button": "Вернуться обратно"
     },
