--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -200,8 +200,8 @@
         "settings-card-firstname": "First name",
         "settings-card-lastname": "Last name",
         "settings-card-gender": "Gender",
-        "settings-card-datebirth": "Date of birth",
-        "settings-card-country": "Country",
+        "settings-card-datebirth": "Birth:",
+        "settings-card-country": "Country:",
         "save-button": "Save"
     },
     "secure": {
