Update user profile + add card block info premium subscribe v9

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -108,7 +108,7 @@
     "bio": {
         "title": "Biography",
         "hint": "The biography should be no more than 500 characters long!",
-        "data-title": "Your details"
+        "data-title": "Details"
     },
     "userMenu": {
         "profile": "My profile",
