--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -202,7 +202,10 @@
         "settings-card-gender": "Пол",
         "settings-card-datebirth": "Дата рождения",
         "settings-card-country": "Страна",
-        "save-button": "Сохранить"
+        "save-button": "Сохранить",
+        "gender-select-placeholder": "Выберите пол",
+        "gender-male": "Мужской",
+        "gender-female": "Женский"
     },
     "countries": {
         "United States": "США",
