Update user profile + add card block info premium subscribe v12

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -203,9 +203,11 @@
         "settings-card-datebirth": "Birth:",
         "settings-card-country": "Country:",
         "save-button": "Save",
-        "gender-select-placeholder": "Select gender",
-        "gender-male": "Male",
-        "gender-female": "Female"
+        "gender": {
+            "gender-select-placeholder": "Select gender",
+            "gender-male": "Male",
+            "gender-female": "Female"
+        }
     },
     "secure": {
         "secure-card-title": "Secure"
