Update settings localization v9

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -207,6 +207,11 @@
             "gender-select-placeholder": "Select gender",
             "gender-male": "Male",
             "gender-female": "Female"
+        },
+        "date": {
+            "day": "Day",
+            "month": "Month",
+            "year": "Year"
         }
     },
     "countries": {
