--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -207,6 +207,11 @@
             "gender-select-placeholder": "Выберите пол",
             "gender-male": "Мужской",
             "gender-female": "Женский"
+        },
+        "date": {
+            "day": "День",
+            "month": "Месяц",
+            "year": "Год"
         }
     },
     "countries": {
